k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ish-automation
  labels:
    name: ish-automation
    environment: production
